iOS pictures stretch fixed, 3 more videos

--- a/naso-ng/src/app/components/main/about/about.component.scss
+++ b/naso-ng/src/app/components/main/about/about.component.scss
@@ -27,6 +27,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: start;
     .maskitem {
         width: 14%;
         min-height: auto;
